# cpp_sample

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
example/: 01_offset_from_center.cpp  02_bearing.cpp  03_path_simulation.cpp  04_misc.cpp  README.md  findings.md
src/: CMakeLists.txt  greet.cpp  greet.h  main.cpp
src/common/: CMakeLists.txt  attitude.h  body_coordinate.h  constants.h  coordinate_conversion.h  ecef_coordinate.h  ecef_position.h  geo_coordinate.h  global_coordinate.h  local_coordinate.h  logging.cpp  logging.h  map_coordinate.h  matrix3x3.h  polygon.cpp  polygon.h  vector2d.h  vector3d.h
tests/: CMakeLists.txt  test_greet.cpp
tests/common/: CMakeLists.txt  test_attitude.cpp  test_body_coordinate.cpp  test_coordinate_conversion.cpp  test_ecef_coordinate.cpp  test_ecef_position.cpp  test_geo_coordinate.cpp  test_global_coordinate.cpp  test_local_coordinate.cpp  test_matrix3x3.cpp  test_polygon.cpp  test_vector2d.cpp  test_vector3d.cpp
